# ESP32

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  COPYING  Default_Settings.txt  GSB_Defaults.h  GSB_Settings.txt  README.md  driver.c  driver.json  generate_defaults.py  partitions.csv  partitions_s3_8m.csv  platformio.cnc3040.ini  platformio.ini  platformio.tpl  sdkconfig  sdkconfig.cnc3040  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s3  sdkconfig.esp32doit-devkit-v1  sdkconfig.esp32doit-devkit-v1.BOOT_WIFI_LOGGING  sdkconfig.esp32doit-devkit-v1.old  sdkconfig.ooznest-cnc  sdkconfig.s3  sdkconfig_s3_8m  subm.txt
.github/: README.md
.github/profile/: README.md
.github/workflows/: esp32.yaml
STM32H7xx/: driver.json
main/: BlackBoxX32.c  BlackBoxX32_map.h  CMakeLists.txt  README.md  bdring_i2s_6_axis_map.h  bdring_v3.5_map.h  bdring_v4_map.h  bluetooth.c  bluetooth.h  bluetooth_le.c  cnc3040_map.h  cnc_boosterpack_map.h  dns_server.c  dns_server.h  driver.c  driver.h  enet.c  enet.h  esp32-hal-uart.c  esp32-hal-uart.h  espduino-32_wemos_d1_r32_uno_map.h  fysetc_e4_map.h  generic_map.h  i2c.c  i2c.h  i2s_out.c  i2s_out.h  i2s_out_s3.c  ioexpand.c  ioports.c  ioports_analog.c  littlefs_hal.c  littlefs_hal.h  main.c  mks_dlc32_2_0_map.h  mks_tinybee_1_0_map.h  mqtt.c  my_machine.h  neopixel_rmt.c  neopixel_spi.c  (+21 more)
main/boards/: BlackBoxX32.c  BlackBoxX32_map.h  bdring_i2s_6_axis_map.h  bdring_i2s_6pack_ext_v2_map.h  bdring_i2s_6x_v1_map.h  bdring_i2s_6x_v3_map.h  bdring_v3.5_map.h  bdring_v4_map.h  btt_rodent_map.h  cnc3040_map.h  cnc_boosterpack_map.h  cnc_boosterpack_s3_map.h  corgi_map.h  espduino-32_wemos_d1_r32_uno_map.h  fysetc_e4_map.h  generic_i2s_s3_map.h  generic_map.h  generic_s3_map.h  jackpot_map.h  mks_dlc32_2_0_map.h  mks_dlc32_2_0_y2onz_map.h  mks_dlc32_max_1_0_map.h  mks_tinybee_1_0_map.h  ooznest_cnc.c  ooznest_cnc_map.h  pibot_5_88_ultra_map.h  pibot_i2s_6_axis_map.h  protoneer_3.xx_map.h  root_cnc_pro_map.h  root_cnc_v2_map.h  root_cnc_v3_map.h  sourcerabbit_4axis.h  sourcerabbit_rabbit_board_4-axis.h  xPro_v5_map.h
main/embedded/: README.md  ap_login.h
main/esp_webui/: commands.c  commands.h  flashfs.c  fs_embedded.c  fs_embedded.h  fs_spiffs.c  fs_spiffs.h  response.c  server.c  server.h  webui.h
main/web/: backend.c
main/webui/: commands.c  response.c  server.c
